fix thin displays not showing as much info

--- a/r34/style.css
+++ b/r34/style.css
@@ -88,7 +88,7 @@ div.right {
     box-shadow: 0 3px 5px 3px #fbfbb344;
 }
 
-button.menuButton {
+.menuButton {
     display: flex;
     padding: 5px;
     margin: 5px;
@@ -102,17 +102,17 @@ button.menuButton {
     justify-content: center;
     transition: all 0.05s cubic-bezier(0.390, 0.575, 0.565, 1.000);
 }
-button.menuButton:enabled {
+.menuButton:enabled {
     opacity: 1;
     cursor: pointer;
 }
-button.menuButton:enabled:hover {
+.menuButton:enabled:hover {
     box-shadow: 0 0 5px 3px var(--accent-4);
 }
-button.menuButton:enabled:active {
+.menuButton:enabled:active {
     transform: translateY(2px);
 }
-button.menuButton:disabled {
+.menuButton:disabled {
     opacity: 0.25;
 }
 
@@ -304,7 +304,7 @@ div.raw pre {
 
 @media (max-width: 800px) {
     #postDisplay {
-        grid-template-areas: "imageDisplay" "buttons" "tags" "raw";
+        grid-template-areas: "imageDisplay" "buttons" "moreInfo" "tags" "raw";
         grid-template-columns: 100%;
         grid-template-rows: 1fr;
     }
